[package]
name = "wgpu-test"
version = "0.1.0"
authors = ["Hector Bennett <hectorbennett@outlook.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]


################
# Dependencies #
################

[dependencies]
wasm-bindgen = "0.2.84"

[dependencies.console_error_panic_hook]
version = "0.1.7"
optional = true

[dependencies.web-sys]
version = "0.3.61"
features = [
    'CanvasRenderingContext2d',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'ImageData',
    'Window',
    'console',
]

####################
# Dev Dependencies #
####################

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
criterion = "0.4.0"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[features]
default = ["console_error_panic_hook"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
